[package]
name = "runner"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"

[dependencies]
# Project dependencies
#TODO Update Path Depedency to cates.io depedency, once changes are published.
aesm-client = { version = "0.1.0", features = ["sgxs"], path = "../../../aesm-client"}
enclave-runner = { version = "0.1.0", path = "../../../enclave-runner" }
sgxs-loaders = { version = "0.1.0", path = "../../../sgxs-loaders" }

# External dependencies
clap = "2.2.5"             # MIT
failure = "0.1.1"          # MIT/Apache-2.0
failure_derive = "0.1.1"   # MIT/Apache-2.0
